fix(material/button): adds flex-shrink to prevent sides cutoff
Updates previous changes to Angular Components buttons containing
icons and adds flex-shrink: 0; to prevent the sides from being
cut off when text-spacing is applied or on smaller screens.

Fixes b/411228600

--- a/src/material/button/button.scss
+++ b/src/material/button/button.scss
@@ -7,9 +7,10 @@
 
 .mat-mdc-button-base {
   text-decoration: none;
-  // Makes button icon not cut off/shrink vertically making the icon visible to fix b/250063405
+  // Makes button icon not cut off/shrink making the icon visible to fix b/411228600
   & .mat-icon {
-    min-height: min-content;
+    min-height: fit-content;
+    flex-shrink: 0;
   }
 }
 
